--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 5</title>
+    <title>Assignment2</title>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
@@ -13,6 +13,9 @@
         <style>
             img {
                 max-height: 146px;
+            }
+            .display-hide {
+                display: none;
             }
         </style>
 </head>
@@ -97,7 +100,7 @@
     </div>
 
     <div class="container bg-white ">
-        <div class="form-section mt-3 p-2" style="display: none;">
+        <div class="form-section mt-3 p-2 display-hide">
             <div class="form-group">
                 <label for="nama">Nama:</label>
                 <input type="text" class="form-control" placeholder="Enter nama" id="nama">
